<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Coffee Night</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="bu1">-</string>
    <string name="_2">2</string>
    <string name="bu2">+</string>
    <string name="order">order</string>
    <string name="quantity">Quantity</string>
    <string name="chocolate">Chocolate</string>
    <string name="exit">exit</string>
    <string name="sub">Coffee Night order for <xliff:g id="name" example="Amy">%s</xliff:g></string>
</resources>
