<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/pic">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:paddingTop="20dp"
            android:hint="@string/name"
            android:inputType="text"
            tools:ignore="Autofill"
            android:textColor="#000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="12dp"
            android:text="@string/toppings"
            android:textSize="15sp"
            android:textAllCaps="true"
            android:gravity="center_vertical"
            android:textColor="#000000"/>

        <CheckBox
            android:id="@+id/cb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/whipped_cream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/cb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/chocolate"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="12dp"
            android:text="@string/quantity"
            android:gravity="center_vertical"
            android:textSize="15sp"
            android:textAllCaps="true"
            android:textColor="#000000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bu1"
                android:onClick="decrement"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/bu1"
                android:layout_margin="12dp"
                tools:ignore="OnClick" />

            <TextView
                android:id="@+id/t1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:textSize="16sp"
                android:textColor="#000000"/>

            <Button
                android:id="@+id/bu2"
                android:onClick="increment"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/bu2"
                android:layout_margin="12dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/bu3"
            android:onClick="submitOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:layout_margin="12dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="248dp">

            <Button
                android:id="@+id/exit_bu"
                android:onClick="exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="36dp"
                android:text="@string/exit" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>
